add items to bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,23 +1,54 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
 
 @article{ning_coherent_2023,
-	title = {A coherent phonon-induced hidden quadrupolar ordered state in Ca2RuO4},
+	title = {A coherent phonon-induced hidden quadrupolar ordered state in {Ca2RuO4}},
 	volume = {14},
+	copyright = {2023 The Author(s)},
 	issn = {2041-1723},
 	url = {https://www.nature.com/articles/s41467-023-44021-4},
 	doi = {10.1038/s41467-023-44021-4},
-	pages = {8258},
+	abstract = {Ultrafast laser excitation provides a means to transiently realize long-range ordered electronic states of matter that are hidden in thermal equilibrium. Recently, this approach has unveiled a variety of thermally inaccessible ordered states in strongly correlated materials, including charge density wave, ferroelectric, magnetic, and intertwined charge-orbital ordered states. However, more exotic hidden states exhibiting higher multipolar ordering remain elusive owing to the challenge of directly manipulating and detecting them with light. Here we demonstrate a method to induce a dynamical transition from a thermally allowed to a thermally forbidden spin-orbit entangled quadrupolar ordered state in Ca2RuO4 by coherently exciting a phonon that is strongly coupled to the order parameter. Combining probe photon energy-resolved coherent phonon spectroscopy measurements with model Hamiltonian calculations, we show that the dynamical transition is manifested through anomalies in the temperature, pump excitation fluence, and probe photon energy dependence of the strongly coupled phonon. With this procedure, we introduce a general pathway to uncover hidden multipolar ordered states and to control their re-orientation on ultrashort timescales.},
+	language = {en},
 	number = {1},
-	journaltitle = {Nature Communications},
-	shortjournal = {Nat Commun},
+	urldate = {2023-12-15},
+	journal = {Nature Communications},
 	author = {Ning, Honglie and Mehio, Omar and Li, Xinwei and Buchhold, Michael and Driesse, Mathias and Zhao, Hengdi and Cao, Gang and Hsieh, David},
-	date = {2023-12-13},
-	langid = {english},
+	month = dec,
+	year = {2023},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
 	keywords = {Electronic properties and materials, Ultrafast photonics},
+	pages = {8258},
+	file = {Full Text PDF:/Users/mdriesse/Zotero/storage/BSETM7S6/Ning et al. - 2023 - A coherent phonon-induced hidden quadrupolar order.pdf:application/pdf},
 }
 
+@misc{driesse_conservative_2024,
+	title = {Conservative {Black} {Hole} {Scattering} at {Fifth} {Post}-{Minkowskian} and {First} {Self}-{Force} {Order}},
+	copyright = {All rights reserved},
+	url = {http://arxiv.org/abs/2403.07781},
+	abstract = {We compute the 5PM order contributions to the scattering angle and impulse of classical black hole scattering in the conservative sector at first self-force order (1SF) using the worldline quantum field theory formalism. This challenging four-loop computation required the use of advanced integration-by-parts and differential equation technology implemented on high-performance computing systems. Use of partial fraction identities allowed us to render the complete integrand in a fully planar form. The resulting function space is simpler than expected: in the scattering angle we see only multiple polylogarithms up to weight three, and a total absence of the elliptic integrals that appeared at 4PM order. All checks on our result, both internal - cancellation of dimensional regularization poles, preservation of the on-shell condition - and external - matching the slow-velocity limit with the post-Newtonian (PN) literature up to 5PN order and matching the tail terms to the 4PM loss of energy - are passed.},
+	language = {en},
+	urldate = {2024-08-27},
+	publisher = {arXiv},
+	author = {Driesse, Mathias and Jakobsen, Gustav Uhre and Mogull, Gustav and Plefka, Jan and Sauer, Benjamin and Usovitsch, Johann},
+	month = may,
+	year = {2024},
+	note = {arXiv:2403.07781 [gr-qc, physics:hep-ph, physics:hep-th]},
+	keywords = {General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+	file = {Driesse et al. - 2024 - Conservative Black Hole Scattering at Fifth Post-M.pdf:/Users/mdriesse/Zotero/storage/XPMZ4UL9/Driesse et al. - 2024 - Conservative Black Hole Scattering at Fifth Post-M.pdf:application/pdf},
+}
 
+@misc{driesse_high-precision_2024,
+	title = {High-precision black hole scattering with {Calabi}-{Yau} manifolds},
+	copyright = {All rights reserved},
+	url = {http://arxiv.org/abs/2411.11846},
+	doi = {10.48550/arXiv.2411.11846},
+	abstract = {Using the worldline quantum field theory formalism, we compute the radiation-reacted impulse, scattering angle, radiated energy and recoil of a classical black hole (or neutron star) scattering event at fifth post-Minkowskian and sub-leading self-force orders (5PM-1SF). This state-of-the-art four-loop computation employs advanced integration-by-parts and differential equation technology, and is considerably more challenging than the conservative 5PM-1SF counterpart. As compared with the conservative 5PM-1SF, in the radiation sector Calabi-Yau three-fold periods appear and contribute to the radiated energy and recoil observables. We give an extensive exposition of the canonicalization of the differential equations and provide details on boundary integrations, Feynman rules, and integration-by-parts strategies. Comparisons to numerical relativity are also performed.},
+	urldate = {2024-12-20},
+	publisher = {arXiv},
+	author = {Driesse, Mathias and Jakobsen, Gustav Uhre and Klemm, Albrecht and Mogull, Gustav and Nega, Christoph and Plefka, Jan and Sauer, Benjamin and Usovitsch, Johann},
+	month = nov,
+	year = {2024},
+	note = {arXiv:2411.11846 [hep-th]},
+	keywords = {General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology, High Energy Physics - Theory, Mathematics - Algebraic Geometry},
+	file = {Preprint PDF:/Users/mdriesse/Zotero/storage/Z77S4EUX/Driesse et al. - 2024 - High-precision black hole scattering with Calabi-Y.pdf:application/pdf;Snapshot:/Users/mdriesse/Zotero/storage/E6NM6NAG/2411.html:text/html},
+}
