attempt to select publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,6 @@
 Publisher: Nature Publishing Group},
 	keywords = {Electronic properties and materials, Ultrafast photonics},
 	pages = {8258},
-	file = {Full Text PDF:/Users/mdriesse/Zotero/storage/BSETM7S6/Ning et al. - 2023 - A coherent phonon-induced hidden quadrupolar order.pdf:application/pdf},
 }
 
 @misc{driesse_conservative_2024,
@@ -34,7 +33,6 @@ Publisher: Nature Publishing Group},
 	year = {2024},
 	note = {arXiv:2403.07781 [gr-qc, physics:hep-ph, physics:hep-th]},
 	keywords = {General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology, High Energy Physics - Theory},
-	file = {Driesse et al. - 2024 - Conservative Black Hole Scattering at Fifth Post-M.pdf:/Users/mdriesse/Zotero/storage/XPMZ4UL9/Driesse et al. - 2024 - Conservative Black Hole Scattering at Fifth Post-M.pdf:application/pdf},
 }
 
 @misc{driesse_high-precision_2024,
@@ -50,5 +48,5 @@ Publisher: Nature Publishing Group},
 	year = {2024},
 	note = {arXiv:2411.11846 [hep-th]},
 	keywords = {General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology, High Energy Physics - Theory, Mathematics - Algebraic Geometry},
-	file = {Preprint PDF:/Users/mdriesse/Zotero/storage/Z77S4EUX/Driesse et al. - 2024 - High-precision black hole scattering with Calabi-Y.pdf:application/pdf;Snapshot:/Users/mdriesse/Zotero/storage/E6NM6NAG/2411.html:text/html},
+	selected = {true},
 }
